# Strata

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cursor/: hooks.json
.cursor/hooks/: guard-deps.js  guard-edit.js
.cursor/rules/: 00-design-authority.mdc  10-mvp-scope.mdc  20-dependency-inversion.mdc  30-loop-semantics.mdc  40-provider-impl.mdc  50-error-taxonomy.mdc  60-git-commit.mdc
doc/: strata-execution-plan.md  strata-runtime-kernel-design.md
examples/: ask.rs  calc.rs  task.rs
examples/fixtures/version-mismatch/: README.md  app.toml
src/: action.rs  error.rs  lib.rs  message.rs  provider.rs  run.rs  session.rs  tool.rs  trace.rs
src/providers/: deepseek.rs  mod.rs
src/tools/: calculator.rs  fs.rs  mod.rs  shell.rs
tests/: loop_semantics.rs
tests/common/: helpers.rs  mock_provider.rs  mod.rs  recording_tracer.rs
